updated mtgame